
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct snd_soc_dai {size_t id; struct snd_soc_component* component; } ;
struct snd_soc_component {int dummy; } ;
struct adau1373_dai {int master; } ;
struct adau1373 {int regmap; struct adau1373_dai* dais; } ;


 int ADAU1373_DAI (size_t) ;
 unsigned int ADAU1373_DAI_FORMAT_DSP ;
 unsigned int ADAU1373_DAI_FORMAT_I2S ;
 unsigned int ADAU1373_DAI_FORMAT_LEFT_J ;
 unsigned int ADAU1373_DAI_FORMAT_RIGHT_J ;
 unsigned int ADAU1373_DAI_INVERT_BCLK ;
 unsigned int ADAU1373_DAI_INVERT_LRCLK ;
 unsigned int ADAU1373_DAI_MASTER ;
 int ADAU1373_DAI_WLEN_MASK ;
 int EINVAL ;



 unsigned int SND_SOC_DAIFMT_FORMAT_MASK ;



 unsigned int SND_SOC_DAIFMT_INV_MASK ;

 unsigned int SND_SOC_DAIFMT_MASTER_MASK ;



 int regmap_update_bits (int ,int ,int ,unsigned int) ;
 struct adau1373* snd_soc_component_get_drvdata (struct snd_soc_component*) ;

__attribute__((used)) static int adau1373_set_dai_fmt(struct snd_soc_dai *dai, unsigned int fmt)
{
 struct snd_soc_component *component = dai->component;
 struct adau1373 *adau1373 = snd_soc_component_get_drvdata(component);
 struct adau1373_dai *adau1373_dai = &adau1373->dais[dai->id];
 unsigned int ctrl;

 switch (fmt & SND_SOC_DAIFMT_MASTER_MASK) {
 case 137:
  ctrl = ADAU1373_DAI_MASTER;
  adau1373_dai->master = 1;
  break;
 case 136:
  ctrl = 0;
  adau1373_dai->master = 0;
  break;
 default:
  return -EINVAL;
 }

 switch (fmt & SND_SOC_DAIFMT_FORMAT_MASK) {
 case 134:
  ctrl |= ADAU1373_DAI_FORMAT_I2S;
  break;
 case 131:
  ctrl |= ADAU1373_DAI_FORMAT_LEFT_J;
  break;
 case 128:
  ctrl |= ADAU1373_DAI_FORMAT_RIGHT_J;
  break;
 case 135:
  ctrl |= ADAU1373_DAI_FORMAT_DSP;
  break;
 default:
  return -EINVAL;
 }

 switch (fmt & SND_SOC_DAIFMT_INV_MASK) {
 case 129:
  break;
 case 132:
  ctrl |= ADAU1373_DAI_INVERT_BCLK;
  break;
 case 130:
  ctrl |= ADAU1373_DAI_INVERT_LRCLK;
  break;
 case 133:
  ctrl |= ADAU1373_DAI_INVERT_LRCLK | ADAU1373_DAI_INVERT_BCLK;
  break;
 default:
  return -EINVAL;
 }

 regmap_update_bits(adau1373->regmap, ADAU1373_DAI(dai->id),
  ~ADAU1373_DAI_WLEN_MASK, ctrl);

 return 0;
}
